@@ -1,3 +1,4 @@
+* compact vat number
 * value Function fields don't set the value anymore
 
 Version 3.4.0 - 2014-10-20
